[gd_scene load_steps=21 format=2]

[ext_resource path="res://sprites/skater_sprite_sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/skater/SkaterScript.gd" type="Script" id=2]
[ext_resource path="res://Camera2D.gd" type="Script" id=3]
[ext_resource path="res://scripts/skater/MovementStrategyManager.gd" type="Script" id=4]
[ext_resource path="res://scripts/skater/movement_strategies/skate_movement_strategy.gd" type="Script" id=5]
[ext_resource path="res://scripts/skater/movement_strategies/grind_movement_strategy.gd" type="Script" id=6]
[ext_resource path="res://scripts/skater/movement_strategies/run_movement_strategy.gd" type="Script" id=7]
[ext_resource path="res://scripts/skater/StateManager.gd" type="Script" id=8]
[ext_resource path="res://scripts/skater/movement_strategies/wall_hang_movement_strategy.gd" type="Script" id=9]
[ext_resource path="res://scenes/BoardArea.gd" type="Script" id=10]

[sub_resource type="Animation" id=1]
resource_name = "GRINDING_LEFT"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("skater-sprite-sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=2]
resource_name = "STANDING"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("skater-sprite-sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=3]
resource_name = "RUNNING_LEFT"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("skater-sprite-sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=4]
resource_name = "RUNNING_RIGHT"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("skater-sprite-sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=5]
resource_name = "SKATE_CROUCHING_LEFT"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("skater-sprite-sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("skater-sprite-sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("skater-sprite-sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=8]
length = 0.4
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("skater-sprite-sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00490049, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=9]
resource_name = "STANDING"
tracks/0/type = "value"
tracks/0/path = NodePath("skater-sprite-sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 16.9423, 2.79077 )

[node name="Node2D" type="Node2D"]
position = Vector2( 20.2272, -43.4509 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 15.3576, 64.0526 )
script = ExtResource( 2 )

[node name="skater-sprite-sheet" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 0.642365, -30.0526 )
texture = ExtResource( 1 )
vframes = 10
hframes = 4
frame = 32

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
position = Vector2( 165.178, -47.4048 )
offset = Vector2( -1.749, 0 )
current = true
zoom = Vector2( 0.5, 0.5 )
offset_h = -0.18
drag_margin_left = 0.58
drag_margin_top = 0.59
drag_margin_right = 0.67
drag_margin_bottom = 0.66
script = ExtResource( 3 )

[node name="MovementStrategyManager" type="Node" parent="KinematicBody2D"]
script = ExtResource( 4 )

[node name="SkateMovementStrategy" type="Node" parent="KinematicBody2D/MovementStrategyManager"]
script = ExtResource( 5 )

[node name="GrindMovementStrategy" type="Node" parent="KinematicBody2D/MovementStrategyManager"]
script = ExtResource( 6 )

[node name="RunMovementStrategy" type="Node" parent="KinematicBody2D/MovementStrategyManager"]
script = ExtResource( 7 )

[node name="WallHangMovementStrategy" type="Node" parent="KinematicBody2D/MovementStrategyManager"]
script = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D"]
anims/GRINDING_LEFT = SubResource( 1 )
anims/GRINDING_RIGHT = SubResource( 2 )
anims/RUNNING_LEFT = SubResource( 3 )
anims/RUNNING_RIGHT = SubResource( 4 )
anims/SKATE_CROUCHING_LEFT = SubResource( 5 )
anims/SKATE_CROUCHING_RIGHT = SubResource( 6 )
anims/SKATE_STANDING_LEFT = SubResource( 7 )
anims/SKATE_STANDING_RIGHT = SubResource( 8 )
anims/STANDING = SubResource( 9 )

[node name="StateManager" type="Node" parent="KinematicBody2D"]
script = ExtResource( 8 )

[node name="BoardArea" type="Area2D" parent="KinematicBody2D"]
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/BoardArea"]
position = Vector2( -0.374603, -4.62541 )
shape = SubResource( 10 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -0.374603, -4.62541 )
shape = SubResource( 10 )
[connection signal="area_entered" from="KinematicBody2D/BoardArea" to="KinematicBody2D/BoardArea" method="_on_BoardArea_area_entered"]
[connection signal="area_exited" from="KinematicBody2D/BoardArea" to="KinematicBody2D/BoardArea" method="_on_BoardArea_area_exited"]
[connection signal="rail_area_entered" from="KinematicBody2D/BoardArea" to="KinematicBody2D" method="_on_skater_entered_rail"]
[connection signal="rail_area_exited" from="KinematicBody2D/BoardArea" to="KinematicBody2D" method="_on_skater_exited_rail"]
